--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ MINIO_PORT=9000
 MINIO_ACCESS_KEY=your_access_key
 MINIO_SECRET_KEY=your_secret_key
 MINIO_USE_SSL=false
-MINIO_BUCKET=note-mark
+MINIO_BUCKET_NAME=note-mark
 MINIO_URL=http://your-minio-host:9000/note-mark/
 
 # 应用配置
