feat:增加代理请求

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,7 @@ MINIO_URL=http://your-minio-host:9000/note-mark/
 # 应用配置
 NODE_ENV=production
 PORT=6090
+
+# HTTP 代理配置（可选，用于访问外部 API）
+# HTTP_PROXY=http://your-proxy-host:7890
+# HTTPS_PROXY=http://your-proxy-host:7890
