--- a/.env.example
+++ b/.env.example
@@ -15,5 +15,6 @@ NODE_ENV=production
 PORT=6090
 
 # HTTP 代理配置（可选，用于访问外部 API）
-# HTTP_PROXY=http://your-proxy-host:7890
-# HTTPS_PROXY=http://your-proxy-host:7890
+# 如果需要代理访问 881903.com 等外部网站，请取消下面的注释
+HTTP_PROXY=http://host.docker.internal:7890
+HTTPS_PROXY=http://host.docker.internal:7890
